--- a/GymWare-Frontend/src/app/abm-comida/abm-comida.component.html
+++ b/GymWare-Frontend/src/app/abm-comida/abm-comida.component.html
@@ -1,13 +1,20 @@
 <h1>Listado de comidas</h1>
-<mat-form-field class="expanded filter-custom">
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
-</mat-form-field>
-<button class="pdf" (click)="print()">PDF</button>
+<div class="row">
+  <div class="col-3">
+    <mat-form-field class="filter-custom expanded">
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
+    </mat-form-field>
+  </div>
+  <div class="col-1 offset-7">
+    <button class="pdf" (click)="print()">PDF</button>
+  </div>
+</div>
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table table-custom">
 
   <ng-container matColumnDef="select">
     <th mat-header-cell *matHeaderCellDef>
-      <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()" [indeterminate]="selection.hasValue() && !isAllSelected()">
+      <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+        [indeterminate]="selection.hasValue() && !isAllSelected()">
       </mat-checkbox>
     </th>
     <td mat-cell *matCellDef="let row">
@@ -34,22 +41,22 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Acciones </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-mini-fab class="mr-3 btn-add">
-        <i class="material-icons" (click)="openDialogModification(element,false)">visibility</i>
+      <button mat-mini-fab class="mr-3 btn-add" (click)="openDialogModification(element,false)">
+        <i class="material-icons">visibility</i>
       </button>
-      <button mat-mini-fab color="primary" class="mr-3">
-        <i class="material-icons" (click)="openDialogModification(element,true)">edit</i>
+      <button mat-mini-fab color="primary" class="mr-3" (click)="openDialogModification(element,true)">
+        <i class="material-icons">edit</i>
       </button>
-      <button mat-mini-fab color="warn">
-        <i class="material-icons" (click)="openDialogBaja(element.ComidaId)">delete</i>
+      <button mat-mini-fab color="warn" (click)="openDialogBaja(element.ComidaId)">
+        <i class="material-icons">delete</i>
       </button>
     </td>
   </ng-container>
- 
+
   <ng-container matColumnDef="add">
     <th mat-header-cell *matHeaderCellDef class="column-add">
-      <button mat-mini-fab color="primary">
-        <i class="material-icons" (click)="openDialogAlta()">add</i>
+      <button mat-mini-fab color="primary" (click)="openDialogAlta()">
+        <i class="material-icons">add</i>
       </button>
     </th>
     <td mat-cell *matCellDef="let element">
