--- a/GymWare-Frontend/src/app/abm-dieta/abm-dieta.component.css
+++ b/GymWare-Frontend/src/app/abm-dieta/abm-dieta.component.css
@@ -13,6 +13,15 @@
     box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
     margin-left: 100px;
 }
+
+.btn-add{
+    background-color: #f2b632;
+}
+
+.expanded {
+    width: 100%;
+}
+
 h1 {
     text-align: center;
     margin-bottom: 2%;
