--- a/GymWare-Frontend/src/app/abm-ejercicio/abm-ejercicio.component.html
+++ b/GymWare-Frontend/src/app/abm-ejercicio/abm-ejercicio.component.html
@@ -1,12 +1,20 @@
 <h1>Listado de ejercicios</h1>
-<mat-form-field class="expanded filter-custom">
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
-</mat-form-field>
-<button class="pdf" (click)="print()">PDF</button>
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table table-custom">  
+<div class="row">
+  <div class="col-3">
+    <mat-form-field class="filter-custom expanded">
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
+    </mat-form-field>
+  </div>
+  <div class="col-1 offset-7">
+    <button class="pdf" (click)="print()">PDF</button>
+  </div>
+</div>
+
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table table-custom">
   <ng-container matColumnDef="select">
     <th mat-header-cell *matHeaderCellDef>
-      <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()" [indeterminate]="selection.hasValue() && !isAllSelected()">
+      <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+        [indeterminate]="selection.hasValue() && !isAllSelected()">
       </mat-checkbox>
     </th>
     <td mat-cell *matCellDef="let row">
@@ -39,7 +47,7 @@
       </button>
     </td>
   </ng-container>
- 
+
   <ng-container matColumnDef="add">
     <th mat-header-cell *matHeaderCellDef class="column-add">
       <button mat-mini-fab color="primary">
@@ -55,3 +63,5 @@
 </table>
 
 <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons class="paginator-custom"></mat-paginator>
+
+
