--- a/GymWare-Frontend/src/app/cliente/cliente.component.css
+++ b/GymWare-Frontend/src/app/cliente/cliente.component.css
@@ -16,8 +16,9 @@
 .center {
     background-color: white;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     padding-bottom: 1.5%;
+    min-height: 780px !important;
 }
 .footer {
     bottom: 0;
