--- a/GymWare-Frontend/src/app/login/login.component.css
+++ b/GymWare-Frontend/src/app/login/login.component.css
@@ -35,7 +35,7 @@
       margin-left: 2%;
   }
   .title-login-container {
-    margin-top: 10%;
+    padding-top: 15%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
